# span-league-table

./: .gitignore  AI_REFLECTION.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
ai/: 27ce5a3c-dc6f-4b98-8405-b41dc6ce1b8e.jsonl  ed232752-4a2f-47aa-9632-c8175fcab651.jsonl
ai/ed232752-4a2f-47aa-9632-c8175fcab651/subagents/: agent-a0cc3cb6fe83dd89d.jsonl  agent-a0cc3cb6fe83dd89d.meta.json  agent-ae157cd1351cc4e11.jsonl  agent-ae157cd1351cc4e11.meta.json  agent-af97f6aa7c6194fce.jsonl  agent-af97f6aa7c6194fce.meta.json  agent-afact-checker-51a29f4de978ee5e.jsonl  agent-afact-checker-51a29f4de978ee5e.meta.json  agent-afinal-red-team-fe4558715e759eb6.jsonl  agent-afinal-red-team-fe4558715e759eb6.meta.json  agent-aqa-reviewer-1e172c8bc216de66.jsonl  agent-aqa-reviewer-1e172c8bc216de66.meta.json  agent-aspan-red-team-414b743f9b35e0a4.jsonl  agent-aspan-red-team-414b743f9b35e0a4.meta.json
ai/ed232752-4a2f-47aa-9632-c8175fcab651/tool-results/: bpipovqrt.txt
data/: results_1974-75_played_by_1974-09-28.csv  results_1974-75_played_by_1974-10-19.csv  results_1974-75_rounds_1-10.csv  standings_1974-75_after_matchday_10.csv  standings_1974-75_as_of_1974-09-28.csv  standings_1974-75_as_of_1974-10-19.csv
src/league_table/: __init__.py  __main__.py  cli.py  csvio.py  models.py  rules.py  table.py
tests/: test_1974_75_season.py  test_cli.py  test_csvio.py  test_rules_goal_average.py  test_rules_points.py  test_table.py
